--- a/Propmaster/Views/Shared/_LoginPartial.cshtml
+++ b/Propmaster/Views/Shared/_LoginPartial.cshtml
@@ -19,6 +19,7 @@
         @if (user.Type == "Admin")
         {
             <li class="nav-item"><a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Create Agent Account</a></li>
+            <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Index">Manage User Account</a></li>
         }
     }
     else
