--- a/Propmaster/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Propmaster/Areas/Identity/Pages/Account/Register.cshtml
@@ -24,9 +24,9 @@
                 <h4>@ViewData["Description"]</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
-                @*<div class="form-group">
+                <div class="form-group">
 
-                        @{
+                    @{
                             List<SelectListItem> listItems = new List<SelectListItem>();
                             listItems.Add(new SelectListItem
                             {
@@ -45,10 +45,10 @@
                                 Value = "Agent"
                             });
 
-                        }
-                        <label asp-for="Input.Type"></label>
-                        <select asp-for="Input.Type" asp-items="listItems"></select>
-                    </div>*@
+                    }
+                    <label asp-for="Input.Type"></label>
+                    <select asp-for="Input.Type" asp-items="listItems"></select>
+                </div>
                 <div class="form-group">
                     <label asp-for="Input.Email"></label>
                     <input asp-for="Input.Email" class="form-control" />
@@ -73,6 +73,11 @@
                     <label asp-for="Input.DOB"></label>
                     <input asp-for="Input.DOB" class="form-control" />
                     <span asp-validation-for="Input.DOB" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.PhoneNumber"></label>
+                    <input asp-for="Input.PhoneNumber" class="form-control" />
+                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
                 </div>
                 <button type="submit" class="btn btn-primary">Register</button>
             </form>
