--- a/Propmaster/Views/Property/Create.cshtml
+++ b/Propmaster/Views/Property/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Propmaster.Models.Property
+﻿@model Propmaster.Models.CreateListingModel
 
 @{
     ViewData["Title"] = "Create";
@@ -16,7 +16,7 @@ else
 
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="Create">
+            <form asp-action="Create" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Title" class="control-label"></label>
@@ -105,10 +105,80 @@ else
                     <input asp-for="Carpark" class="form-control" />
                     <span asp-validation-for="Carpark" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <label asp-for="PicUrl" class="control-label"></label>
-                    <input asp-for="PicUrl" class="form-control" />
-                    <span asp-validation-for="PicUrl" class="text-danger"></span>
+                <div style="padding: 10px">
+                    <div class="card">
+                        <div class="card-header">
+                            Media/Photo
+                        </div>
+                        <div class="field" align="left" style="padding: 20px;">
+                            <h3 style="padding-bottom: 10px;">Upload your images</h3>
+                            <input style="padding-bottom: 10px;" asp-for="PicUrl" type="file" id="files" required multiple />
+                        </div>
+                        <style>
+                            input[type="file"] {
+                                display: block;
+                            }
+
+                            .imageThumb {
+                                max-height: 75px;
+                                border: 2px solid;
+                                padding: 1px;
+                                cursor: pointer;
+                            }
+
+                            .pip {
+                                display: inline-block;
+                                margin: 10px 10px 0 0;
+                            }
+
+                            .remove {
+                                display: block;
+                                background: #444;
+                                border: 1px solid black;
+                                color: white;
+                                text-align: center;
+                                cursor: pointer;
+                            }
+
+                                .remove:hover {
+                                    background: white;
+                                    color: black;
+                                }
+                        </style>
+                        <script>
+                            $(document).ready(function () {
+                                if (window.File && window.FileList && window.FileReader) {
+                                    $("#files").on("change", function (e) {
+                                        var files = e.target.files,
+                                            filesLength = files.length;
+                                        for (var i = 0; i < filesLength; i++) {
+                                            var f = files[i];
+                                            var fileReader = new FileReader();
+                                            fileReader.onload = function (e) {
+                                                var file = e.target;
+                                                $(
+                                                    '<span class="pip">' +
+                                                    '<img class="imageThumb" src="' +
+                                                    e.target.result +
+                                                    '" title="' +
+                                                    file.name +
+                                                    '"/>' +
+                                                    '<br/><span class="remove">Remove image</span>' +
+                                                    "</span>"
+                                                ).insertAfter("#files");
+                                                $(".remove").click(function () {
+                                                    $(this).parent(".pip").remove();
+                                                });
+                                            };
+                                            fileReader.readAsDataURL(f);
+                                        }
+                                    });
+                                } else {
+                                    alert("Your browser doesn't support to File API");
+                                }
+                            });
+                        </script>
+                    </div>
                 </div>
                 <input asp-for="PropertyStatus" class="form-control" type="hidden" />
                 <input asp-for="DateCreated" class="form-control" type="hidden" />
