Fixed edit property

--- a/Propmaster/Views/Property/Create.cshtml
+++ b/Propmaster/Views/Property/Create.cshtml
@@ -112,7 +112,7 @@ else
                         </div>
                         <div class="field" align="left" style="padding: 20px;">
                             <h3 style="padding-bottom: 10px;">Upload your images</h3>
-                            <input style="padding-bottom: 10px;" asp-for="PicUrl" type="file" id="files" required multiple />
+                            <input style="padding-bottom: 10px;" asp-for="Pictures" type="file" id="files" required multiple />
                         </div>
                         <style>
                             input[type="file"] {
