--- a/Propmaster/Views/Property/Delete.cshtml
+++ b/Propmaster/Views/Property/Delete.cshtml
@@ -94,6 +94,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="PropertyId" />
+        <input type="hidden" asp-for="PropertyLocation" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
