--- a/Propmaster/Views/Property/Details.cshtml
+++ b/Propmaster/Views/Property/Details.cshtml
@@ -98,6 +98,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.PropertyId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.PropertyId" asp-route-PropertyLocation="@Model.PropertyLocation" asp-route-PropertyId="@Model.PropertyId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
