--- a/Propmaster/Views/Shared/_Layout.cshtml
+++ b/Propmaster/Views/Shared/_Layout.cshtml
@@ -26,9 +26,6 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
                         <partial name="_MoreOptions" />
                     </ul>
                 </div>
@@ -43,7 +40,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - Propmaster - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - Propmaster
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
