--- a/Propmaster/Views/Shared/_MoreOptions.cshtml
+++ b/Propmaster/Views/Shared/_MoreOptions.cshtml
@@ -14,7 +14,7 @@
     @if (user.Type == "Admin")
     {
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item text-dark" asp-controller="Property" asp-action="Index">Create Properties</a>
+            <a class="dropdown-item text-dark" asp-controller="Property" asp-action="Index">Manage Properties</a>
         </div>
     }
     else if (user.Type == "Agent")
