--- a/Propmaster/Views/Home/Index.cshtml
+++ b/Propmaster/Views/Home/Index.cshtml
@@ -1,8 +1,202 @@
-﻿@{
+﻿@model Propmaster.Models.Filter
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<link rel="stylesheet" href="~/css/home_page.css" />
+
+<div class="jumbotron jumbotron-fluid" style="margin-top: 100px;">
+    <h1 style="text-align: center; padding-bottom: 30px; font-size: 3.5rem;">Welcome to Propmaster!</h1>
+    <form>
+        <div class="form-group row justify-content-center">
+            <select asp-for="PropertyLocation" class="form-control dropdown-list" id="PropertyLocation">
+                <option value="Kuala Lumpur" selected>Kuala Lumpur</option>
+                <option value="Shah Alam">Shah Alam</option>
+                <option value="Petaling Jaya">Petaling Jaya</option>
+                <option value="Selayang">Selayang</option>
+                <option value="Ampang Jaya">Ampang Jaya</option>
+                <option value="Kajang">Kajang</option>
+                <option value="Klang">Klang</option>
+                <option value="Subang Jaya">Subang Jaya</option>
+                <option value="Johor Bahru">Johor Bahru</option>
+                <option value="Iskandar Puteri">Iskandar Puteri</option>
+                <option value="Pasir Gudang">Pasir Gudang</option>
+                <option value="Alor Setar">Alor Setar</option>
+                <option value="Malacca City">Malacca City</option>
+                <option value="Seremban">Seremban</option>
+                <option value="George Town">George Town</option>
+                <option value="Seberang Perai">Seberang Perai</option>
+                <option value="Ipoh">Ipoh</option>
+                <option value="Kota Kinabalu">Kota Kinabalu</option>
+                <option value="Kuching">Kuching</option>
+                <option value="Miri">Miri</option>
+                <option value="Kuala Terengganu">Kuala Terengganu</option>
+            </select>
+            <span asp-validation-for="PropertyLocation" class="text-danger"></span>
+        </div>
+        <div class="row custom-carets justify-content-center">
+            <div class="btn-group small-size">
+                <select asp-for="PropertyType" class="form-control" id="ListingSelection" style="border: unset; border-radius: unset; outline: unset;background-color:transparent">
+                    <option value="Bungalow / Villa / Cluster houses" selected>Bungalow / Villa / Cluster houses</option>
+                    <option value="Single storey">Single storey</option>
+                    <option value="One and a half storey">One and a half storey</option>
+                    <option value="Double storey">Double storey</option>
+                    <option value="Two and a half storey">Two and a half storey</option>
+                    <option value="Triple storey">Triple storey</option>
+                    <option value="Semi detached">Semi detached</option>
+                    <option value="Townhouse">Townhouse</option>
+                    <option value="Others">Others</option>
+                </select>
+            </div>
+            <div class="btn-group small-size2 investRange" style="color: #495057;">
+                <button class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="outline: unset; color: unset; background-color: unset; border: unset;">
+                    Price
+                </button>
+                <div class="dropdown-menu ddRange" role="menu">
+                    <div class="rangemenu">
+                        <div class="freeformPrice" style="padding:10px;">
+                            <div style="margin-bottom: 10px">
+                                <input asp-for="MinPrice" type="text" class="min_input form-control" placeholder="Min Price">
+                            </div>
+                            <div class="col-md-2 "><span class="arrow"></span></div>
+                            <div>
+                                <input asp-for="MaxPrice" type="text" class="max_input form-control" placeholder="Max Price">
+                            </div>
+                        </div>
+                        <div class="btnClear">
+                            <a href="javascript:void(0)" class="btn btn-link">Clear</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="btn-group small-size2" style="color: #495057;">
+                <button class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="outline: unset; color: unset; background-color: unset; border: unset;">
+                    Beds
+                </button>
+                <div class="dropdown-menu" style="padding-left: 20px;">
+                    <div class="custom-control custom-radio">
+                        <input asp-for="Bedroom" type="radio" id="customRadio1" name="Bedroom" value="1" class="custom-control-input" checked>
+                        <label asp-for="Bedroom" class="custom-control-label" for="customRadio1">1</label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                        <input asp-for="Bedroom" type="radio" id="customRadio2" name="Bedroom" value="2" class="custom-control-input">
+                        <label asp-for="Bedroom" class="custom-control-label" for="customRadio2">2</label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                        <input asp-for="Bedroom" type="radio" id="customRadio3" name="Bedroom" value="3" class="custom-control-input">
+                        <label asp-for="Bedroom" class="custom-control-label" for="customRadio3">3</label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                        <input asp-for="Bedroom" type="radio" id="customRadio4" name="Bedroom" value="4" class="custom-control-input">
+                        <label asp-for="Bedroom" class="custom-control-label" for="customRadio4">4</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="form-group row justify-content-center" style="padding-top:20px">
+            <input type="submit" value="ViewProperties" class="btn btn-outline-primary btn-lg" style="width:200px" asp-action="Filter" asp-controller="Property"/>
+        </div>
+    </form>
 </div>
+
+<script>
+    $('.dropdown-menu.ddRange')
+        .click(function (e) {
+            e.stopPropagation();
+        });
+
+    function disableDropDownRangeOptions(max_values, minValue) {
+        if (max_values) {
+            max_values.each(function () {
+                var maxValue = $(this).attr("value");
+
+                if (parseInt(maxValue) < parseInt(minValue)) {
+                    $(this).addClass('disabled');
+                } else {
+                    $(this).removeClass('disabled');
+                }
+            });
+        }
+    }
+
+    function setuinvestRangeDropDownList(min_values, max_values, min_input, max_input, clearLink, dropDownControl) {
+        min_values.click(function () {
+            var minValue = $(this).attr('value');
+            min_input.val(minValue);
+            document.getElementById('price_range1').innerHTML = minValue;
+            disableDropDownRangeOptions(max_values, minValue);
+
+            validateDropDownInputs();
+        });
+
+        max_values.click(function () {
+            var maxValue = $(this).attr('value');
+            max_input.val(maxValue);
+            document.getElementById('price_range2').innerHTML = maxValue;
+            toggleDropDown();
+        });
+
+        clearLink.click(function () {
+            min_input.val('');
+            max_input.val('');
+
+            disableDropDownRangeOptions(max_values);
+
+            validateDropDownInputs();
+        });
+
+        min_input.on('input',
+            function () {
+                var minValue = min_input.val();
+
+                disableDropDownRangeOptions(max_values, minValue);
+                validateDropDownInputs();
+            });
+
+        max_input.on('input', validateDropDownInputs);
+
+        max_input.blur('input',
+            function () {
+                toggleDropDown();
+            });
+
+        function validateDropDownInputs() {
+            var minValue = parseInt(min_input.val());
+            var maxValue = parseInt(max_input.val());
+
+            if (maxValue > 0 && minValue > 0 && maxValue < minValue) {
+                min_input.addClass('inputError');
+                max_input.addClass('inputError');
+
+                return false;
+            } else {
+                min_input.removeClass('inputError');
+                max_input.removeClass('inputError');
+
+                return true;
+            }
+        }
+
+        function toggleDropDown() {
+            if (validateDropDownInputs() &&
+                parseInt(min_input.val()) > 0 &&
+                parseInt(max_input.val()) > 0) {
+
+                // auto close if two values are valid
+                dropDownControl.dropdown('toggle');
+            }
+        }
+    }
+
+    setuinvestRangeDropDownList(
+        $('.investRange .min_value'),
+        $('.investRange .max_value'),
+        $('.investRange .freeformPrice .min_input'),
+        $('.investRange .freeformPrice .max_input'),
+        $('.investRange .btnClear'),
+        $('.investRange .dropdown-toggle'));
+
+    $('.dropdown-list').select2();
+</script>
