--- a/Propmaster/Views/ServiceBus/ProcessMsgResult.cshtml
+++ b/Propmaster/Views/ServiceBus/ProcessMsgResult.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "New Booking List";
 }
 
-<h1>ProcessMsgResult</h1>
+<h1>New Booking List</h1>
 
 @foreach (var b in Model)
 {
