--- a/Propmaster/Views/Booking/Edit.cshtml
+++ b/Propmaster/Views/Booking/Edit.cshtml
@@ -23,7 +23,10 @@
             <input type="hidden" asp-for="Status" class="form-control" />
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <input asp-for="Type" class="form-control" />
+                <select asp-for="Type" class="form-control" id="Type">
+                    <option value="Consultation">Consultation</option>
+                    <option value="Visit">Visit</option>
+                </select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
