Changed beds to bedrooms

--- a/Propmaster/Views/Home/Index.cshtml
+++ b/Propmaster/Views/Home/Index.cshtml
@@ -73,7 +73,7 @@
             </div>
             <div class="btn-group small-size2" style="color: #495057;">
                 <button class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="outline: unset; color: unset; background-color: unset; border: unset;">
-                    Beds
+                    Bedrooms
                 </button>
                 <div class="dropdown-menu" style="padding-left: 20px;">
                     <div class="custom-control custom-radio">
