Fix app insight app config

--- a/Propmaster/Views/Property/Edit.cshtml
+++ b/Propmaster/Views/Property/Edit.cshtml
@@ -72,7 +72,7 @@
                         <img style="width:300px; padding-bottom: 10px;" src="@item" />
                         <div class="row">
                             <a asp-action="DeleteBlob" asp-route-area="@item" asp-route-PropertyLocation="@Model.PropertyLocation" asp-route-PropertyId="@Model.PropertyId">Delete |  </a>
-                            <button type="button" class="btn btn-info updateblob" data-toggle="modal" data-target="#myModal" data-title="@item">  Open Modal</button>
+                            <button type="button" class="btn btn-info updateblob" data-toggle="modal" data-target="#myModal" data-title="@item"> Replace Photo </button>
                         </div>
                     }
                 }
